<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="9"
            android:text="@string/app_name" />

        <ImageView
            android:id="@+id/setting"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:src="@drawable/vector_drawable_setting"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:src="@drawable/vector_drawable_user"/>

    </LinearLayout>

    <TableLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerInParent="true">
        <TableRow>

            <LinearLayout
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_normal"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:paddingLeft="15dp"
                    android:paddingTop="15dp"
                    android:text="@string/one_click_delete1"
                    android:textColor="@color/darkgray"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:paddingLeft="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/one_click_delete2"
                    android:textColor="@color/darkgray"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/remove"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:orientation="vertical"
                android:background="@drawable/btn_normal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:textColor="@color/darkgray"
                    android:paddingTop="15dp"
                    android:paddingLeft="15dp"
                    android:textSize="15sp"
                    android:text="@string/removed_manually1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:textColor="@color/darkgray"
                    android:paddingBottom="15dp"
                    android:paddingLeft="15dp"
                    android:textSize="15sp"
                    android:text="@string/removed_manually2"/>
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_marginTop="10dp">
            <LinearLayout
                android:id="@+id/modify"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:orientation="vertical"
                android:background="@drawable/btn_normal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:textColor="@color/darkgray"
                    android:paddingTop="15dp"
                    android:paddingLeft="15dp"
                    android:textSize="15sp"
                    android:text="@string/modify_content1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:textColor="@color/darkgray"
                    android:paddingBottom="15dp"
                    android:paddingLeft="15dp"
                    android:textSize="15sp"
                    android:text="@string/modify_content2"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/manual"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:orientation="vertical"
                android:background="@drawable/btn_normal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:textColor="@color/darkgray"
                    android:paddingTop="15dp"
                    android:paddingLeft="15dp"
                    android:textSize="15sp"
                    android:text="@string/user_manual1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:textColor="@color/darkgray"
                    android:paddingBottom="15dp"
                    android:paddingLeft="15dp"
                    android:textSize="15sp"
                    android:text="@string/user_manual2"/>
            </LinearLayout>

        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/importPhoto"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:src="@drawable/vector_drawable_import"/>

        <ImageView
            android:id="@+id/camera"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/vector_drawable_camera"/>

        <ImageView
            android:id="@+id/exportPdf"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:src="@drawable/vector_drawable_pdf"/>

    </LinearLayout>

</RelativeLayout>